other/resources/analytics/argo/argo-workflow-http-proxy.in.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: argo-workflow-httpproxy
  namespace: jupyterflow
spec:
  virtualhost:
    fqdn: argo-workflows.${DATA_E2E_BASE_URL}
    tls:
      passthrough: true
  tcpproxy:
    services:
      - name: argo-server
        port: 2746
